# wilbur

./: .env.example  .eslintrc.cjs  .gitignore  .mcp.json  ARCHITECTURE_ANALYSIS_REPORT.md  LIVEKIT_SETUP.md  MIGRATION.md  README.md  docker-compose.yml  eslint.config.js  index.html  netlify.toml  package-lock.json  package.json  playwright.config.ts  playwright.local.config.ts  playwright.whiteboard.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
wilbur-api/: .env.example  Cargo.toml  Dockerfile  fly.toml
wilbur-api/migrations/: 001_create_enums.sql  002_create_users.sql  003_create_tenants.sql  004_create_rooms.sql  005_create_room_memberships.sql  006_create_sessions.sql  007_create_chatmessages.sql  008_create_alerts.sql  009_create_polls.sql  010_create_media_tracks.sql  011_create_notes_and_files.sql  012_create_user_integrations.sql  013_create_user_themes.sql  014_create_moderation.sql  015_create_notifications.sql  016_create_private_chats.sql  017_create_config.sql  018_create_branding_audit.sql  019_create_triggers.sql  020_create_indexes.sql
wilbur-api/src/: config.rs  error.rs  main.rs  state.rs
wilbur-api/src/db/: alerts.rs  config.rs  media_tracks.rs  messages.rs  mod.rs  moderation.rs  notifications.rs  polls.rs  private_chats.rs  room_files.rs  room_memberships.rs  rooms.rs  sessions.rs  tenants.rs  user_integrations.rs  user_themes.rs  users.rs
wilbur-api/src/extractors/: auth.rs  mod.rs  pagination.rs  room_access.rs
wilbur-api/src/middleware/: mod.rs  rate_limit.rs  security.rs
wilbur-api/src/models/: alert.rs  auth.rs  integration.rs  media_track.rs  (+13 more)
(+718 files in other folders)
