[package]
name = "wilbur-api"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"

[dependencies]
# Web Framework
axum = { version = "0.8", features = ["ws", "multipart", "macros"] }
axum-extra = { version = "0.10", features = ["typed-header", "cookie", "query"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit", "compression-gzip", "request-id"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }

# Auth
jsonwebtoken = "9"
argon2 = "0.5"

# Email
lettre = { version = "0.11", features = ["tokio1-rustls-tls", "builder"] }

# Storage (S3/R2)
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }

# LiveKit
livekit-api = "0.4"

# HTTP Client (OAuth)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.19", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dashmap = "6"
dotenvy = "0.15"
rand = "0.8"
base64 = "0.22"
url = "2"
mime = "0.3"
bytes = "1"
futures = "0.3"
tokio-stream = "0.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
